module/core/test_tools/tests/inc/dynamic/namespace_does_not_exists.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `wtest_basic`
 --> tests/inc/dynamic/namespace_does_not_exists.rs:1:5
  |
1 | use wtest_basic::exposed::exposed::*;
  |     ^^^^^^^^^^^ use of undeclared crate or module `wtest_basic`

error: cannot find macro `tests_index` in this scope
  --> tests/inc/dynamic/namespace_does_not_exists.rs:15:1
   |
15 | tests_index!
   | ^^^^^^^^^^^
   |
help: consider importing one of these items
   |
1  + use meta_tools::tests_index;
   |
1  + use test_tools::tests_index;
   |

error: cannot find macro `tests_impls` in this scope
 --> tests/inc/dynamic/namespace_does_not_exists.rs:5:1
  |
5 | tests_impls!
  | ^^^^^^^^^^^
  |
help: consider importing one of these items
  |
1 + use meta_tools::tests_impls;
  |
1 + use test_tools::tests_impls;
  |
